objects/ssot__AssessmentQuestion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActiveAssessmentQuestionVersionId__c</fullName>
        <label>Active Assessment Question Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentQuestionCategory__c</fullName>
        <label>Assessment Question Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentQuestionDataType__c</fullName>
        <label>Assessment Question Data Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentQuestionSetId__c</fullName>
        <label>Assessment Question Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Question Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuestionText__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedQuestionId__c</fullName>
        <label>Related Question</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueIdentifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291284379_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentQuestion_RelatedQuestionId_rel</label>
        <referenceTo>ssot__AssessmentQuestion__dlm</referenceTo>
        <relationshipLabel>AssessmentQuestion_RelatedQuestionId_rel</relationshipLabel>
        <relationshipName>rel_1720291284379_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291819043_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentQuestion_ActiveAssessmentQ_rel</label>
        <referenceTo>ssot__AssessmentQuestionVersion__dlm</referenceTo>
        <relationshipLabel>AssessmentQuestion_ActiveAssessmentQ_rel</relationshipLabel>
        <relationshipName>rel_1720291819043_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>